GROOVY-8162: Update Groovysh to JLine3 (fix native handling on windows)